--- a/_units/09.md
+++ b/_units/09.md
@@ -54,11 +54,18 @@ In the key of C major, this chord has a feeling of stability since it is the ton
 
 {% include img-figure url="/MUTOR/assets/images/unit9_tristan.png" description="Tristan Prelude" %}
 
-Wagner_Tristan_opening.midi 
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_The-Tristan-Chord.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
 
 The chord can easily be explained as a half-diminished seventh chord or as a French augmented 6th chord where the G# is an appoggiatura  to the A, however, the way in which it resolves calls these labels into question.
-
-# Ambiguity
 
 # Tuning and Temperament
 
@@ -122,18 +129,36 @@ Download the following patches which will allow you to explore different tuning 
 
 {% include note author="vg" text="There needs to be something more current! " %}
 
-# Period Tunings
-A tuning where all thirds and fifths are just cannot exist mathematically, therefore all tunings such as the following are compromises. The term _temperament_ (as opposed to _tuning_) refers to the attempt of creating a compromise by either modifying thirds and/or fifths.
 
-- Just-intonation tuning
-- Pythagorean tuning 
-- Meantone temperament
-- Werckmeister temperament
-- Valotti 
-- and many more
+# Period Tunings
+Theorists have created tunings from either deriving them from overtone series (just-intonation tuning) or stacking fifths (Pythagorean tuning). Stacking four fifths on C leads to an E which is considerably sharper (81/64; 408 cents) than the E contained in the overtone series (5/4; 386 cents). This discrepancy - mathematically represented by the ratio 81/64 * 4/5 = 81/80 = 21.5 cents - is called the Syntonic comma. Since no tuning can exist mathematically where all thirds and fifths are just, musicians have attempted to make up for this by modifying either thirds and/or fifths — an approach referred to as _temperament_. 
+
+## Meantone Temperament
+
+During the Renaissance and Baroques eras meantone temperament was wide-spread: lowering fifths to keep the thirds as just as possible. 
+There were a number of variants, quarter-comma and third-comma meantone temperament among them. The term quarter-comma, for instance, emphasizes the fact in this temperament the just fifth (702 cents) is lowered by an interval corresponding to a fourth of Syntonic comma (21.5 cents / 4 = 5.375 cents): 696.6 cents. Other temperaments have been suggested by Werckmeister, Valotti and others all geared towards allowing modulcation in distant key areas while keeping thirds and fifth as pure as possible.
+
+Many of these tunings and temperaments lead to tuning alternatives for any given key. For instance, in just intonation an Ab (8/5) is different from a G# (25/16). Keyboards have been built to represent those alternatives such as the archicembalo from 1588. 
+
+{% include img-figure url="/MUTOR/assets/images/unit9-Archicembalo_en_Cents.jpg" description="The Archicembalo had a large number of tuning alternatives for the 12 keys of the chromatic scale." %}
 
 A comprehensive list of tunings and temperaments (currently more than 4600 files) can be found in the [Scala Archive](http://www.huygens-fokker.org/microtonality/scales.html).
 
+# Equal Temperament
+
+The ultimate compromise has been achieved by introducing equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 fifts and 7 octaves (Pythagorian comma; 23.46 cents) is tempered out by dividing up the comma evenly (1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
+
+By tempering out fifths, the above-mentioned tuning alternatives become enharmonically equivalent, e.g. there is no longer a distinction between a G# and Ab. Due to equal temperament, approaches such as dodecaphony (invented by Arnold Schoenberg in 1923) and total serialism were developed, which treat all tones equally and subject them to mathematical set operations.
+
+## Ambiguity
+
+We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major, C major serving as a pivot chord between those two key areas.
+Via enharmonic equivalence, equal temperament adds another dimension to modulation: there is no audible distinction between the dominant seventh chord (C-E-G-Bb; a dominant in the key of F) and the German 6th chord (C-E-G-A#, a secondary dominant in the key of E). This ambiguity of the sonority has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. 
+As the dissonant Bb is resolved by downward motion (inwards) while the leading tone A# moves up (outwards),  this type of pivot chord is comparable to the ambiguous cube illusion (a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
+
+{% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
+
+Looking at the image for an extended period of time or periodically, the perspective of the cubes will flip as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by dwelling on the ambiguous sonority, composers prepare the listeners for the flip and lead them to realize the other state in a context where the precise timing of the event also matters.
 
 # Microtonality
 The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations are smaller than 100 cents are common. Hence the term microtonality.
