--- a/_units/09.md
+++ b/_units/09.md
@@ -29,16 +29,15 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Introduction
-Webster's dictionary defines harmony as:
-* Reference to music:
-1. the combination of simultaneous musical notes in a chord 
-1. the structure of music with respect to the composition and progression of chords 
-1. the science of the structure, relation, and progression of chords
-+ Generally: pleasing or congruent arrangement of parts
 
-http://www.m-w.com
+In this unit we will look at scales and harmony from the perspective of perception and cognition of music. In units 4 and 5 we have already learned about consonance and dissonance as well as pitch, intervals and key areas, resp. Harmony are beased on those principles, e.g. we expect chords to have low sensory consonance and we also are keenly aware of when chords don't seem to fit. 
 
-As we can see from the above definition, the word harmony often refers to either a chord, a progression of chords, or a consonant  (or generally speaking, pleasing) sonority.  The task of defining harmony is a difficult one—is it a chord or a progression of chords?  How are harmony and harmonic progression different from timbre and timbral evolution?  In this unit, we will discuss these questions and look at how composers in the 20th and 21st centuries view harmony.  We will also look at the effects that tuning systems have on harmony.
+[Webster's dictionary](http://www.m-w.com) defines harmony in reference to music as (1) the combination of simultaneous musical notes in a chord, (2) the structure of music with respect to the composition and progression of chords or (3) the the science of the structure, relation, and progression of chords. Colloquially, harmony also often denotes the pleasing or congruent arrangement of parts.
+
+As we can see from the above definition, the word harmony often refers to either a chord, a progression of chords, or a consonant (or generally speaking, pleasing) sonority.  The task of defining harmony is a difficult one—is it a chord or a progression of chords?  How are harmony and harmonic progression different from timbre and timbral evolution?  In this unit, we will discuss these questions and look at how composers in the 20th and 21st centuries view harmony.  We will also look at the effects that tuning systems have on harmony.
+
+Scales are the collection of pitches, harmonies and melodies are formed from. They usually span the interval of an octave and repeat when going beyond it. The pitch of the individual tones within a scale depends on a variety of factors which have undergone changes throughout history as composers focussed on aspects such as pure sonorities or being able to modulate to distant key areas. It turns out that using 12 pitches per octave is the result of a compromise, but there has been an interest throughout history to consider scales with fewer or many more pitches per octave. The deviation from the standard is usually referred to as microtonality. 
+
 
 # Historical View of Harmony
 
@@ -46,9 +45,7 @@ The term harmony comes from a Greek word that translates literally as "means of 
 
 The distinction between harmony and harmonic progression is an important one.  Consider, for example, the C major chord in figure 1.
 
-{% include img-figure url="/MUTOR/assets/images/unit9_cmaj.png" description="C major chord" %}
-
-Figure 1.  C major triad.
+{% include img-figure url="/MUTOR/assets/images/unit9_cmaj.png" description="C major triad" %}
 
 In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound less stable as if it should move to F.  As we can see, the context in which a chord appears is important.  Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 9.3).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
 
@@ -289,6 +286,9 @@ A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.
 [NOTE--THIS IS A SCREENSHOT OF THE HELP PATCH.  A REAL DEMO IS COMING ASAP]
 
 {% include img-figure url="/MUTOR/assets/images/unit9_migrator-ss.png" description="Roughness" %}
+
+# Summary
+In this unit we have learned about scales and harmony. Harmony is a complex notion that refers both to the pleasantness of simultanously sounding notes as well as the logic in which one sonority moves to another within a given framework such as a key area. A scale contains the tones from which sonorities are formed. These tones can be tuned to pitches according to various principles of which just intonation and equal temperament are examples of. The theory and practice of microtonality takes advantage of the fact that scales can be formed from a virtually unlimited number of pitches. In the 20th and 21st centuries, the principles of tension and release have been expanded by taking musical parameters such as roughness and inharmonicity in consideration.  
 
 # References
 
